--- a/apphere/Base.lproj/Main.storyboard
+++ b/apphere/Base.lproj/Main.storyboard
@@ -365,7 +365,7 @@ Developer: Derek Sheldon</string>
                                         </subviews>
                                     </stackView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cFW-c4-bxa" userLabel="Bottom View">
-                                        <rect key="frame" x="0.0" y="360" width="300" height="175"/>
+                                        <rect key="frame" x="0.0" y="360" width="300" height="258"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="3w2-5h-qRQ" userLabel="Address Stack View">
                                                 <rect key="frame" x="81" y="20" width="138.5" height="82"/>
@@ -442,7 +442,6 @@ Developer: Derek Sheldon</string>
                                             <constraint firstItem="zNZ-se-hoS" firstAttribute="centerX" secondItem="cFW-c4-bxa" secondAttribute="centerX" id="Z1X-wU-1Av"/>
                                             <constraint firstItem="zNZ-se-hoS" firstAttribute="top" secondItem="3w2-5h-qRQ" secondAttribute="bottom" constant="20" id="jrf-63-wFl"/>
                                             <constraint firstItem="3w2-5h-qRQ" firstAttribute="centerX" secondItem="cFW-c4-bxa" secondAttribute="centerX" id="pWl-Tn-R3f"/>
-                                            <constraint firstAttribute="bottom" secondItem="zNZ-se-hoS" secondAttribute="bottom" id="z6G-yH-tAV"/>
                                         </constraints>
                                     </view>
                                     <button opaque="NO" alpha="0.69999999999999996" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8o7-eQ-Hs9" userLabel="Close Button" customClass="CloseButton" customModule="apphere" customModuleProvider="target">
@@ -473,6 +472,7 @@ Developer: Derek Sheldon</string>
                                     <constraint firstItem="usv-VJ-bwq" firstAttribute="leading" secondItem="5ZE-sE-iJ9" secondAttribute="leading" constant="10" id="JEX-6b-a0Y"/>
                                     <constraint firstAttribute="trailing" secondItem="5ZE-sE-iJ9" secondAttribute="trailing" id="LbZ-UZ-FnE"/>
                                     <constraint firstItem="5ZE-sE-iJ9" firstAttribute="leading" secondItem="GtD-6W-098" secondAttribute="leading" id="Ts8-oF-rLj"/>
+                                    <constraint firstAttribute="bottom" secondItem="cFW-c4-bxa" secondAttribute="bottom" id="WW8-oX-IyP"/>
                                     <constraint firstAttribute="width" constant="300" id="gLC-b0-AHu"/>
                                     <constraint firstItem="5ZE-sE-iJ9" firstAttribute="bottom" secondItem="XaY-qc-YSF" secondAttribute="bottom" constant="20" id="hIb-Bu-IwG"/>
                                     <constraint firstAttribute="trailing" secondItem="8o7-eQ-Hs9" secondAttribute="trailing" constant="15" id="lZN-0R-QM5"/>
